# coursework

./: .env_template  .gitignore  README.md  config.py  main.py  pyproject.toml  reports.py
develop_fun/: get_logger.py
src/: data_loader.py  services.py  utils.py
tests/: test_data_loader.py  test_main.py  test_reports.py  test_services.py  test_utils.py
