[tool.poetry]
name = "курсовая"
version = "0.1.0"
description = ""
authors = ["admin <dimap5825@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.3"
requests = "^2.32.5"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
